# Engine

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Pipfile  README.md  conanfile.py  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Conan.cmake  StandardProjectSettings.cmake
cmake/toolchain/: llvm-mingw32-x86_64  llvm-mingw32-x86_64.cmake
script/: build-container.bat  build-container.sh  run-container.bat  run-container.sh
src/: CMakeLists.txt  main.cpp  pch.h
